Header: fixed z-index to make sure body elements go behind the float

--- a/src/scss/grommet-core/_objects.drop.scss
+++ b/src/scss/grommet-core/_objects.drop.scss
@@ -2,7 +2,7 @@
 
 .grommet.#{$grommet-namespace}drop {
   position: fixed;
-  z-index: 20;
+  z-index: 51;
   border-radius: $border-radius;
   overflow: auto;
 }
